[gd_scene load_steps=12 format=2]

[ext_resource path="res://scripts/Level.gd" type="Script" id=1]
[ext_resource path="res://textures/spacebackground.png" type="Texture" id=2]
[ext_resource path="res://scripts/Planet.gd" type="Script" id=3]
[ext_resource path="res://meshes/LinearLevel.mesh" type="ArrayMesh" id=4]
[ext_resource path="res://materials/metalgrid.material" type="Material" id=5]
[ext_resource path="res://scenes/Player.tscn" type="PackedScene" id=6]
[ext_resource path="res://scenes/Portal.tscn" type="PackedScene" id=7]

[sub_resource type="PanoramaSky" id=1]
panorama = ExtResource( 2 )

[sub_resource type="Environment" id=2]
background_mode = 2
background_sky = SubResource( 1 )

[sub_resource type="ConcavePolygonShape" id=3]
data = PoolVector3Array( -14.8203, 1.1123, 1.1123, -14.8203, -1.1123, 1.1123, -14.8203, -1.1123, -1.1123, -12.7422, 1.1123, -1.1123, -12.7422, -1.1123, -1.1123, 2.8203, -1.1123, -1.1123, 2.8203, 1.1123, -1.1123, 2.8203, -1.1123, -1.1123, 2.8203, -1.1123, 1.1123, -12.7422, 1.1123, 1.1123, -12.7422, -1.1123, 1.1123, -14.8203, -1.1123, 1.1123, 2.8203, -1.1123, -1.1123, -12.7422, -1.1123, -1.1123, -12.7422, -1.1123, 1.1123, -14.8203, 1.1123, -1.1123, -12.7422, 1.1123, -1.1123, -12.7422, 1.1123, 1.1123, -12.7422, 1.1123, -1.1123, 2.8203, 1.1123, -1.1123, 2.8203, 1.1123, 1.1123, -12.7422, -1.1123, -1.1123, -14.8203, -1.1123, -1.1123, -14.8203, -1.1123, 1.1123, 2.8203, 1.1123, 1.1123, 2.8203, -1.1123, 1.1123, -12.7422, -1.1123, 1.1123, -14.8203, 1.1123, -1.1123, -14.8203, -1.1123, -1.1123, -14.8203, -1.1123, -4.5703, -14.8203, -1.1123, -6.7969, -12.7422, -1.1123, -6.7969, -12.7422, -1.1123, -9.7891, -12.7422, 1.1123, -1.1123, -14.8203, 1.1123, -1.1123, -14.8203, 1.1123, -4.5703, -14.8203, -1.1123, -1.1123, -12.7422, -1.1123, -1.1123, -12.7422, -1.1123, -4.5703, -12.7422, -1.1123, -6.7969, -12.7422, 1.1123, -6.7969, -12.7422, 1.1123, -9.7891, -12.7422, -1.1123, -1.1123, -12.7422, 1.1123, -1.1123, -12.7422, 1.1123, -4.5703, -8.4531, -1.1123, -4.5703, -8.4531, 1.1123, -4.5703, -6.2383, 1.1123, -4.5703, -12.7422, 1.1123, -6.7969, -14.8203, 1.1123, -6.7969, -14.8203, 1.1123, -9.7891, -12.7422, 1.1123, -6.7969, -12.7422, -1.1123, -6.7969, -8.4531, -1.1123, -6.7969, -14.8203, -1.1123, -6.7969, -14.8203, 1.1123, -6.7969, -14.8203, 1.1123, -4.5703, -14.8203, 1.1123, -6.7969, -12.7422, 1.1123, -6.7969, -12.7422, 1.1123, -4.5703, -12.7422, -1.1123, -6.7969, -14.8203, -1.1123, -6.7969, -14.8203, -1.1123, -4.5703, -14.3516, 0.6484, -10.2578, -14.3516, -0.6484, -10.2578, -13.2031, -0.6484, -10.2578, -12.7422, 1.1123, -4.5703, -12.7422, 1.1123, -6.7969, -8.4531, 1.1123, -6.7969, -12.7422, -1.1123, -6.7969, -12.7422, -1.1123, -4.5703, -8.4531, -1.1123, -4.5703, -12.7422, -1.1123, -4.5703, -12.7422, 1.1123, -4.5703, -8.4531, 1.1123, -4.5703, -14.3516, -0.6484, -10.2578, -14.3516, 0.6484, -10.2578, -14.8203, 1.1123, -9.7891, -14.8203, -1.1123, -9.7891, -12.7422, -1.1123, -9.7891, -13.2031, -0.6484, -10.2578, -12.7422, 1.1123, -9.7891, -14.8203, 1.1123, -9.7891, -14.3516, 0.6484, -10.2578, -12.7422, 1.1123, -9.7891, -13.2031, 0.6484, -10.2578, -13.2031, -0.6484, -10.2578, -14.8203, 1.1123, -6.7969, -14.8203, -1.1123, -6.7969, -14.8203, -1.1123, -9.7891, -6.2383, -1.1123, -6.7969, -6.2383, -1.1123, -4.5703, -3.668, -1.1123, -4.5703, -8.4531, 1.1123, -11.4531, -8.4531, -1.1123, -11.4531, -8.4531, -1.1123, -13.6875, -8.4531, 1.1123, -4.5703, -8.4531, 1.1123, -6.7969, -6.2383, 1.1123, -6.7969, -8.4531, -1.1123, -6.7969, -8.4531, -1.1123, -4.5703, -6.2383, -1.1123, -4.5703, -8.4531, 1.1123, -13.6875, -8.4531, -1.1123, -13.6875, -6.2383, -1.1123, -13.6875, -8.4531, 1.1123, -13.6875, -6.2383, 1.1123, -13.6875, -6.2383, 1.1123, -15.2969, -6.2383, -1.1123, -11.4531, -6.2383, 1.1123, -11.4531, -6.2383, 1.1123, -13.6875, -8.4531, -1.1123, -11.4531, -6.2383, -1.1123, -11.4531, -6.2383, -1.1123, -13.6875, -3.668, 1.1123, -6.7969, -3.668, -1.1123, -6.7969, -3.668, -1.1123, -4.5703, -6.2383, 1.1123, -6.7969, -6.2383, -1.1123, -6.7969, -3.668, -1.1123, -6.7969, -6.2383, 1.1123, -4.5703, -6.2383, 1.1123, -6.7969, -3.668, 1.1123, -6.7969, -6.2383, -1.1123, -4.5703, -6.2383, 1.1123, -4.5703, -3.668, 1.1123, -4.5703, -8.4531, -1.1123, -6.7969, -6.2383, -1.1123, -6.7969, -6.2383, -1.1123, -11.4531, -6.2383, -1.1123, -6.7969, -6.2383, 1.1123, -6.7969, -6.2383, 1.1123, -11.4531, -6.2383, 1.1123, -6.7969, -8.4531, 1.1123, -6.7969, -8.4531, 1.1123, -11.4531, -8.4531, 1.1123, -6.7969, -8.4531, -1.1123, -6.7969, -8.4531, -1.1123, -11.4531, -6.2383, 2.2637, -11.4531, -8.4531, 2.2637, -11.4531, -8.4531, 2.2637, -13.6875, -6.2383, 1.1123, -11.4531, -8.4531, 1.1123, -11.4531, -8.4531, 2.2637, -11.4531, -6.2383, 1.1123, -13.6875, -6.2383, 1.1123, -11.4531, -6.2383, 2.2637, -11.4531, -8.4531, 1.1123, -11.4531, -8.4531, 1.1123, -13.6875, -8.4531, 2.2637, -13.6875, -8.4531, 1.1123, -15.2969, -6.2383, 1.1123, -15.2969, -6.2383, 2.2637, -15.2969, -6.2383, 2.2637, -13.6875, -8.4531, 2.2637, -13.6875, -8.4531, 3.043, -13.6875, -6.2383, 1.1123, -13.6875, -6.2383, 2.2637, -13.6875, -6.2383, 2.2637, -15.2969, -8.4531, 2.2637, -13.6875, -8.4531, 1.1123, -13.6875, -8.4531, 1.1123, -15.2969, -6.2383, 3.043, -13.6875, -8.4531, 3.043, -13.6875, -8.4531, 3.043, -15.2969, -8.4531, 3.043, -15.2969, -8.4531, 2.2637, -15.2969, -8.4531, 2.2637, -16.4844, -6.2383, 2.2637, -15.2969, -6.2383, 2.2637, -13.6875, -6.2383, 3.043, -13.6875, -8.4531, 2.2637, -13.6875, -8.4531, 2.2637, -15.2969, -8.4531, 3.043, -15.2969, -8.4531, 2.2637, -16.4844, -6.2383, 2.2637, -16.4844, -6.2383, 3.043, -16.4844, -8.4531, 2.2637, -15.2969, -6.2383, 2.2637, -15.2969, -6.2383, 2.2637, -16.4844, -6.2383, 2.2637, -15.2969, -6.2383, 3.043, -15.2969, -6.2383, 3.043, -16.4844, -6.2383, 3.043, -16.4844, -6.2383, 3.043, -15.2969, -6.2383, 3.7539, -15.2969, -6.2383, 3.7539, -15.2969, -8.4531, 3.7539, -15.2969, -8.4531, 3.7539, -16.4844, -6.2383, 3.7539, -16.4844, -8.4531, 3.7539, -16.4844, -8.4531, 3.7539, -21.1875, -6.2383, 3.043, -15.2969, -8.4531, 3.043, -15.2969, -8.4531, 3.7539, -15.2969, -8.4531, 3.043, -15.2969, -8.4531, 3.043, -16.4844, -8.4531, 3.7539, -16.4844, -8.4531, 3.043, -21.1875, -6.2383, 3.043, -21.1875, -6.2383, 3.7539, -21.1875, -8.4531, 3.7539, -16.4844, -8.4531, 3.043, -16.4844, -8.4531, 3.043, -21.1875, -8.4531, 3.043, -16.4844, -6.2383, 3.043, -16.4844, -6.2383, 3.043, -21.1875, -6.2383, 3.7539, -16.4844, -6.2383, 3.7539, -21.1875, -0.2271, 3.7539, -21.1875, -0.2271, 3.043, -21.1875, -0.2271, 3.043, -16.4844, -0.2271, -1.5479, -16.4844, -6.2383, 3.7539, -21.1875, -6.2383, 3.043, -21.1875, -0.2271, 3.043, -21.1875, -6.2383, 3.043, -16.4844, -6.2383, 3.7539, -16.4844, -0.2271, 3.7539, -16.4844, -6.2383, 3.043, -21.1875, -6.2383, 3.043, -16.4844, -0.2271, 3.043, -16.4844, 0.6489, 3.043, -16.4844, 0.6489, 3.7539, -16.4844, 0.6489, 3.7539, -21.1875, -0.2271, 3.7539, -21.1875, -0.2271, 3.043, -21.1875, 0.6489, 3.043, -21.1875, -0.2271, 3.7539, -16.4844, -0.2271, 3.7539, -21.1875, 0.6489, 3.7539, -21.1875, -0.2271, 3.043, -16.4844, -0.2271, 3.7539, -16.4844, 0.6489, 3.7539, -16.4844, 0.6489, -1.5479, -21.1875, -0.2271, -1.5479, -21.1875, -0.2271, -2.1543, -21.1875, 0.6489, 3.043, -21.1875, -0.2271, 3.043, -21.1875, -0.2271, -1.5479, -21.1875, -0.2271, 3.043, -16.4844, 0.6489, 3.043, -16.4844, 0.6489, -1.5479, -16.4844, 0.6489, 3.043, -16.4844, 0.6489, 3.043, -21.1875, 0.6489, -1.5479, -21.1875, -0.2271, -2.1543, -21.1875, -0.2271, -2.1543, -16.4844, 0.6489, -2.1543, -16.4844, -0.2271, -1.5479, -21.1875, -0.2271, -1.5479, -16.4844, -0.2271, -2.1543, -16.4844, -0.2271, -1.5479, -16.4844, 0.6489, -1.5479, -16.4844, 0.6489, -2.1543, -16.4844, 0.6489, -2.1543, -21.1875, 0.6489, -2.1543, -16.4844, 9.6406, -2.1543, -16.4844, 9.6406, -1.5479, -16.4844, 9.6406, -1.5479, -21.1875, 9.6406, -2.1543, -21.1875, 0.6489, -1.5479, -16.4844, 0.6489, -1.5479, -21.1875, 9.6406, -1.5479, -21.1875, 0.6489, -2.1543, -25.25, 9.6406, -2.1543, -25.25, 9.6406, -2.1543, -26.4063, 0.6489, -2.1543, -16.4844, 0.6489, -1.5479, -16.4844, 9.6406, -1.5479, -16.4844, 0.6489, -1.5479, -26.4063, 0.6489, -2.1543, -26.4063, 9.6406, -2.1543, -26.4063, 9.6406, -2.1543, -25.25, 9.6406, -1.5479, -25.25, 9.6406, -1.5479, -26.4063, 0.6489, -1.5479, -25.25, 0.6489, -2.1543, -25.25, 0.6489, -2.1543, -26.4063, 0.6489, -1.5479, -25.25, 0.6489, -1.5479, -26.4063, 0.6489, -0.7515, -26.4063, 9.6406, -1.5479, -21.1875, 0.6489, -1.5479, -21.1875, 0.6489, -1.5479, -25.25, 0.6489, -1.5479, -21.1875, 0.6489, -2.1543, -21.1875, 0.6489, -2.1543, -25.25, 9.6406, -2.1543, -21.1875, 9.6406, -1.5479, -21.1875, 9.6406, -1.5479, -25.25, 0.6489, -2.1543, -21.1875, 9.6406, -2.1543, -21.1875, 9.6406, -2.1543, -25.25, 9.6406, -0.7515, -25.25, 0.6489, -0.7515, -25.25, 0.6489, -0.7515, -26.4063, 9.6406, -1.5479, -26.4063, 9.6406, -0.7515, -26.4063, 9.6406, -0.7515, -29.3125, 9.6406, -1.5479, -25.25, 0.6489, -1.5479, -25.25, 0.6489, -0.7515, -25.25, 9.6406, -1.5479, -26.4063, 9.6406, -1.5479, -25.25, 9.6406, -0.7515, -25.25, 0.6489, -1.5479, -29.3125, 9.6406, -1.5479, -29.3125, 9.6406, -0.7515, -29.3125, 9.6406, -0.7515, -26.4063, 0.6489, -0.7515, -26.4063, 0.6489, -0.7515, -29.3125, 0.6489, -1.5479, -26.4063, 9.6406, -1.5479, -26.4063, 9.6406, -1.5479, -29.3125, 0.6489, -1.5479, -26.4063, 0.6489, -1.5479, -29.3125, -1.0439, -1.5479, -29.3125, -1.0439, -0.7515, -26.4063, -1.0439, -1.5479, -26.4063, -1.0439, -1.5479, -29.3125, 0.6489, -0.7515, -26.4063, 0.6489, -1.5479, -26.4063, -1.0439, -1.5479, -26.4063, 0.6489, -0.7515, -29.3125, 0.6489, -0.7515, -26.4063, -1.0439, -0.7515, -26.4063, -1.0439, -0.7515, -35.75, -1.0439, -0.7515, -34.1875, -15.4531, -0.7515, -34.1875, 0.6489, -1.5479, -35.75, 0.6489, -0.7515, -35.75, -1.0439, -0.7515, -35.75, 0.6489, -0.7515, -34.1875, -1.0439, -0.7515, -34.1875, -1.0439, -0.7515, -35.75, 0.6489, -1.5479, -34.1875, 0.6489, -0.7515, -34.1875, 0.6489, -0.7515, -35.75, -1.0439, -1.5479, -34.1875, 0.6489, -1.5479, -34.1875, 0.6489, -1.5479, -35.75, -1.0439, -1.5479, -29.3125, 0.6489, -1.5479, -29.3125, 0.6489, -1.5479, -34.1875, 0.6489, -1.5479, -29.3125, 0.6489, -0.7515, -29.3125, 0.6489, -0.7515, -34.1875, 0.6489, -0.7515, -29.3125, -1.0439, -0.7515, -29.3125, -1.0439, -0.7515, -34.1875, -1.0439, -0.7515, -29.3125, -1.0439, -1.5479, -29.3125, -1.0439, -1.5479, -34.1875, -15.4531, -0.7515, -34.1875, -15.4531, -1.5479, -34.1875, -15.4531, -1.5479, -35.75, -1.0439, -0.7515, -34.1875, -1.0439, -1.5479, -34.1875, -15.4531, -1.5479, -34.1875, -1.0439, -1.5479, -34.1875, -1.0439, -1.5479, -35.75, -15.4531, -1.5479, -35.75, -1.0439, -1.5479, -35.75, -1.0439, -0.7515, -35.75, -15.4531, -0.7515, -35.75, -14.8203, 1.1123, 1.1123, -14.8203, -1.1123, -1.1123, -14.8203, 1.1123, -1.1123, -12.7422, 1.1123, -1.1123, 2.8203, -1.1123, -1.1123, 2.8203, 1.1123, -1.1123, 2.8203, 1.1123, -1.1123, 2.8203, -1.1123, 1.1123, 2.8203, 1.1123, 1.1123, -12.7422, 1.1123, 1.1123, -14.8203, -1.1123, 1.1123, -14.8203, 1.1123, 1.1123, 2.8203, -1.1123, -1.1123, -12.7422, -1.1123, 1.1123, 2.8203, -1.1123, 1.1123, -14.8203, 1.1123, -1.1123, -12.7422, 1.1123, 1.1123, -14.8203, 1.1123, 1.1123, -12.7422, 1.1123, -1.1123, 2.8203, 1.1123, 1.1123, -12.7422, 1.1123, 1.1123, -12.7422, -1.1123, -1.1123, -14.8203, -1.1123, 1.1123, -12.7422, -1.1123, 1.1123, 2.8203, 1.1123, 1.1123, -12.7422, -1.1123, 1.1123, -12.7422, 1.1123, 1.1123, -14.8203, 1.1123, -1.1123, -14.8203, -1.1123, -4.5703, -14.8203, 1.1123, -4.5703, -14.8203, -1.1123, -6.7969, -12.7422, -1.1123, -9.7891, -14.8203, -1.1123, -9.7891, -12.7422, 1.1123, -1.1123, -14.8203, 1.1123, -4.5703, -12.7422, 1.1123, -4.5703, -14.8203, -1.1123, -1.1123, -12.7422, -1.1123, -4.5703, -14.8203, -1.1123, -4.5703, -12.7422, -1.1123, -6.7969, -12.7422, 1.1123, -9.7891, -12.7422, -1.1123, -9.7891, -12.7422, -1.1123, -1.1123, -12.7422, 1.1123, -4.5703, -12.7422, -1.1123, -4.5703, -8.4531, -1.1123, -4.5703, -6.2383, 1.1123, -4.5703, -6.2383, -1.1123, -4.5703, -12.7422, 1.1123, -6.7969, -14.8203, 1.1123, -9.7891, -12.7422, 1.1123, -9.7891, -12.7422, 1.1123, -6.7969, -8.4531, -1.1123, -6.7969, -8.4531, 1.1123, -6.7969, -14.8203, -1.1123, -6.7969, -14.8203, 1.1123, -4.5703, -14.8203, -1.1123, -4.5703, -14.8203, 1.1123, -6.7969, -12.7422, 1.1123, -4.5703, -14.8203, 1.1123, -4.5703, -12.7422, -1.1123, -6.7969, -14.8203, -1.1123, -4.5703, -12.7422, -1.1123, -4.5703, -14.3516, 0.6484, -10.2578, -13.2031, -0.6484, -10.2578, -13.2031, 0.6484, -10.2578, -12.7422, 1.1123, -4.5703, -8.4531, 1.1123, -6.7969, -8.4531, 1.1123, -4.5703, -12.7422, -1.1123, -6.7969, -8.4531, -1.1123, -4.5703, -8.4531, -1.1123, -6.7969, -12.7422, -1.1123, -4.5703, -8.4531, 1.1123, -4.5703, -8.4531, -1.1123, -4.5703, -14.3516, -0.6484, -10.2578, -14.8203, 1.1123, -9.7891, -14.8203, -1.1123, -9.7891, -14.8203, -1.1123, -9.7891, -13.2031, -0.6484, -10.2578, -14.3516, -0.6484, -10.2578, -12.7422, 1.1123, -9.7891, -14.3516, 0.6484, -10.2578, -13.2031, 0.6484, -10.2578, -12.7422, 1.1123, -9.7891, -13.2031, -0.6484, -10.2578, -12.7422, -1.1123, -9.7891, -14.8203, 1.1123, -6.7969, -14.8203, -1.1123, -9.7891, -14.8203, 1.1123, -9.7891, -6.2383, -1.1123, -6.7969, -3.668, -1.1123, -4.5703, -3.668, -1.1123, -6.7969, -8.4531, 1.1123, -11.4531, -8.4531, -1.1123, -13.6875, -8.4531, 1.1123, -13.6875, -8.4531, 1.1123, -4.5703, -6.2383, 1.1123, -6.7969, -6.2383, 1.1123, -4.5703, -8.4531, -1.1123, -6.7969, -6.2383, -1.1123, -4.5703, -6.2383, -1.1123, -6.7969, -8.4531, 1.1123, -13.6875, -6.2383, -1.1123, -13.6875, -6.2383, 1.1123, -13.6875, -8.4531, 1.1123, -13.6875, -6.2383, 1.1123, -15.2969, -8.4531, 1.1123, -15.2969, -6.2383, -1.1123, -11.4531, -6.2383, 1.1123, -13.6875, -6.2383, -1.1123, -13.6875, -8.4531, -1.1123, -11.4531, -6.2383, -1.1123, -13.6875, -8.4531, -1.1123, -13.6875, -3.668, 1.1123, -6.7969, -3.668, -1.1123, -4.5703, -3.668, 1.1123, -4.5703, -6.2383, 1.1123, -6.7969, -3.668, -1.1123, -6.7969, -3.668, 1.1123, -6.7969, -6.2383, 1.1123, -4.5703, -3.668, 1.1123, -6.7969, -3.668, 1.1123, -4.5703, -6.2383, -1.1123, -4.5703, -3.668, 1.1123, -4.5703, -3.668, -1.1123, -4.5703, -8.4531, -1.1123, -6.7969, -6.2383, -1.1123, -11.4531, -8.4531, -1.1123, -11.4531, -6.2383, -1.1123, -6.7969, -6.2383, 1.1123, -11.4531, -6.2383, -1.1123, -11.4531, -6.2383, 1.1123, -6.7969, -8.4531, 1.1123, -11.4531, -6.2383, 1.1123, -11.4531, -8.4531, 1.1123, -6.7969, -8.4531, -1.1123, -11.4531, -8.4531, 1.1123, -11.4531, -6.2383, 2.2637, -11.4531, -8.4531, 2.2637, -13.6875, -6.2383, 2.2637, -13.6875, -6.2383, 1.1123, -11.4531, -8.4531, 2.2637, -11.4531, -6.2383, 2.2637, -11.4531, -6.2383, 1.1123, -13.6875, -6.2383, 2.2637, -11.4531, -6.2383, 2.2637, -13.6875, -8.4531, 1.1123, -11.4531, -8.4531, 2.2637, -13.6875, -8.4531, 2.2637, -11.4531, -8.4531, 1.1123, -15.2969, -6.2383, 2.2637, -15.2969, -8.4531, 2.2637, -15.2969, -6.2383, 2.2637, -13.6875, -8.4531, 3.043, -13.6875, -6.2383, 3.043, -13.6875, -6.2383, 1.1123, -13.6875, -6.2383, 2.2637, -15.2969, -6.2383, 1.1123, -15.2969, -8.4531, 2.2637, -13.6875, -8.4531, 1.1123, -15.2969, -8.4531, 2.2637, -15.2969, -6.2383, 3.043, -13.6875, -8.4531, 3.043, -15.2969, -6.2383, 3.043, -15.2969, -8.4531, 3.043, -15.2969, -8.4531, 2.2637, -16.4844, -8.4531, 3.043, -16.4844, -6.2383, 2.2637, -15.2969, -6.2383, 3.043, -13.6875, -6.2383, 3.043, -15.2969, -8.4531, 2.2637, -13.6875, -8.4531, 3.043, -15.2969, -8.4531, 3.043, -13.6875, -8.4531, 2.2637, -16.4844, -6.2383, 3.043, -16.4844, -8.4531, 3.043, -16.4844, -8.4531, 2.2637, -15.2969, -6.2383, 2.2637, -16.4844, -8.4531, 2.2637, -16.4844, -6.2383, 2.2637, -15.2969, -6.2383, 3.043, -16.4844, -6.2383, 2.2637, -16.4844, -6.2383, 3.043, -16.4844, -6.2383, 3.7539, -15.2969, -6.2383, 3.7539, -16.4844, -6.2383, 3.7539, -15.2969, -8.4531, 3.7539, -16.4844, -6.2383, 3.7539, -16.4844, -6.2383, 3.7539, -16.4844, -8.4531, 3.7539, -21.1875, -6.2383, 3.7539, -21.1875, -6.2383, 3.043, -15.2969, -8.4531, 3.7539, -15.2969, -6.2383, 3.7539, -15.2969, -8.4531, 3.043, -15.2969, -8.4531, 3.7539, -16.4844, -8.4531, 3.7539, -15.2969, -8.4531, 3.043, -21.1875, -6.2383, 3.7539, -21.1875, -8.4531, 3.7539, -21.1875, -8.4531, 3.7539, -16.4844, -8.4531, 3.043, -21.1875, -8.4531, 3.7539, -21.1875, -8.4531, 3.043, -16.4844, -6.2383, 3.043, -21.1875, -8.4531, 3.043, -21.1875, -6.2383, 3.7539, -16.4844, -0.2271, 3.7539, -21.1875, -0.2271, 3.7539, -16.4844, -0.2271, 3.043, -21.1875, -0.2271, -1.5479, -16.4844, -0.2271, -1.5479, -21.1875, -6.2383, 3.7539, -21.1875, -0.2271, 3.043, -21.1875, -0.2271, 3.7539, -21.1875, -6.2383, 3.043, -16.4844, -0.2271, 3.7539, -16.4844, -0.2271, 3.043, -16.4844, -6.2383, 3.043, -21.1875, -0.2271, 3.043, -16.4844, -0.2271, 3.043, -21.1875, 0.6489, 3.043, -16.4844, 0.6489, 3.7539, -21.1875, 0.6489, 3.043, -21.1875, -0.2271, 3.7539, -21.1875, 0.6489, 3.043, -21.1875, 0.6489, 3.7539, -21.1875, -0.2271, 3.7539, -16.4844, 0.6489, 3.7539, -21.1875, 0.6489, 3.7539, -16.4844, -0.2271, 3.043, -16.4844, 0.6489, 3.7539, -16.4844, 0.6489, 3.043, -16.4844, 0.6489, -1.5479, -21.1875, -0.2271, -2.1543, -21.1875, 0.6489, -2.1543, -21.1875, 0.6489, 3.043, -21.1875, -0.2271, -1.5479, -21.1875, 0.6489, -1.5479, -21.1875, -0.2271, 3.043, -16.4844, 0.6489, -1.5479, -16.4844, -0.2271, -1.5479, -16.4844, 0.6489, 3.043, -16.4844, 0.6489, -1.5479, -21.1875, 0.6489, -1.5479, -16.4844, -0.2271, -2.1543, -21.1875, 0.6489, -2.1543, -16.4844, 0.6489, -2.1543, -21.1875, -0.2271, -1.5479, -21.1875, -0.2271, -2.1543, -16.4844, -0.2271, -2.1543, -21.1875, -0.2271, -1.5479, -16.4844, 0.6489, -2.1543, -16.4844, -0.2271, -2.1543, -16.4844, 0.6489, -2.1543, -21.1875, 9.6406, -2.1543, -16.4844, 9.6406, -2.1543, -21.1875, 9.6406, -1.5479, -16.4844, 9.6406, -2.1543, -21.1875, 9.6406, -2.1543, -16.4844, 0.6489, -1.5479, -16.4844, 9.6406, -1.5479, -21.1875, 9.6406, -1.5479, -16.4844, 0.6489, -2.1543, -25.25, 9.6406, -2.1543, -26.4063, 0.6489, -2.1543, -26.4063, 0.6489, -2.1543, -16.4844, 9.6406, -1.5479, -16.4844, 9.6406, -2.1543, -16.4844, 0.6489, -1.5479, -26.4063, 9.6406, -2.1543, -26.4063, 9.6406, -1.5479, -26.4063, 9.6406, -2.1543, -25.25, 9.6406, -1.5479, -26.4063, 9.6406, -2.1543, -26.4063, 0.6489, -1.5479, -25.25, 0.6489, -2.1543, -26.4063, 0.6489, -1.5479, -26.4063, 0.6489, -1.5479, -25.25, 0.6489, -0.7515, -26.4063, 0.6489, -0.7515, -25.25, 9.6406, -1.5479, -21.1875, 0.6489, -1.5479, -25.25, 9.6406, -1.5479, -25.25, 0.6489, -1.5479, -21.1875, 0.6489, -2.1543, -25.25, 0.6489, -1.5479, -25.25, 9.6406, -2.1543, -21.1875, 9.6406, -1.5479, -25.25, 9.6406, -2.1543, -25.25, 0.6489, -2.1543, -21.1875, 9.6406, -2.1543, -25.25, 0.6489, -2.1543, -25.25, 9.6406, -0.7515, -25.25, 0.6489, -0.7515, -26.4063, 9.6406, -0.7515, -26.4063, 9.6406, -1.5479, -26.4063, 9.6406, -0.7515, -29.3125, 9.6406, -1.5479, -29.3125, 9.6406, -1.5479, -25.25, 0.6489, -0.7515, -25.25, 9.6406, -0.7515, -25.25, 9.6406, -1.5479, -26.4063, 9.6406, -0.7515, -25.25, 9.6406, -0.7515, -26.4063, 0.6489, -1.5479, -29.3125, 9.6406, -0.7515, -29.3125, 0.6489, -0.7515, -29.3125, 9.6406, -0.7515, -26.4063, 0.6489, -0.7515, -29.3125, 9.6406, -0.7515, -29.3125, 0.6489, -1.5479, -26.4063, 9.6406, -1.5479, -29.3125, 0.6489, -1.5479, -29.3125, 0.6489, -1.5479, -26.4063, -1.0439, -1.5479, -29.3125, -1.0439, -1.5479, -26.4063, -1.0439, -0.7515, -26.4063, -1.0439, -1.5479, -29.3125, -1.0439, -0.7515, -29.3125, 0.6489, -0.7515, -26.4063, -1.0439, -1.5479, -26.4063, -1.0439, -0.7515, -26.4063, 0.6489, -0.7515, -29.3125, -1.0439, -0.7515, -26.4063, -1.0439, -0.7515, -29.3125, -1.0439, -0.7515, -35.75, -15.4531, -0.7515, -34.1875, -15.4531, -0.7515, -35.75, 0.6489, -1.5479, -35.75, -1.0439, -0.7515, -35.75, -1.0439, -1.5479, -35.75, 0.6489, -0.7515, -34.1875, -1.0439, -0.7515, -35.75, 0.6489, -0.7515, -35.75, 0.6489, -1.5479, -34.1875, 0.6489, -0.7515, -35.75, 0.6489, -1.5479, -35.75, -1.0439, -1.5479, -34.1875, 0.6489, -1.5479, -35.75, -1.0439, -1.5479, -35.75, -1.0439, -1.5479, -29.3125, 0.6489, -1.5479, -34.1875, -1.0439, -1.5479, -34.1875, 0.6489, -1.5479, -29.3125, 0.6489, -0.7515, -34.1875, 0.6489, -1.5479, -34.1875, 0.6489, -0.7515, -29.3125, -1.0439, -0.7515, -34.1875, 0.6489, -0.7515, -34.1875, -1.0439, -0.7515, -29.3125, -1.0439, -1.5479, -34.1875, -1.0439, -0.7515, -34.1875, -15.4531, -0.7515, -34.1875, -15.4531, -1.5479, -35.75, -15.4531, -0.7515, -35.75, -1.0439, -0.7515, -34.1875, -15.4531, -1.5479, -34.1875, -15.4531, -0.7515, -34.1875, -1.0439, -1.5479, -34.1875, -15.4531, -1.5479, -35.75, -15.4531, -1.5479, -34.1875, -1.0439, -1.5479, -35.75, -15.4531, -0.7515, -35.75, -15.4531, -1.5479, -35.75 )

[sub_resource type="BoxShape" id=4]
extents = Vector3( 155.345, 54.2043, 111.479 )

[node name="Root" type="Spatial"]
script = ExtResource( 1 )

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 2 )

[node name="Planet" type="StaticBody" parent="."]
transform = Transform( -4.37114e-007, 0, -10, 0, 10, 0, 10, 0, -4.37114e-007, 0, 0, 0 )
script = ExtResource( 3 )

[node name="CollisionShape" type="CollisionShape" parent="Planet"]
transform = Transform( 0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0, 0, 0 )
shape = SubResource( 3 )

[node name="LinearLevelMesh" type="MeshInstance" parent="Planet"]
transform = Transform( 0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0, 0, 0 )
mesh = ExtResource( 4 )
material/0 = ExtResource( 5 )

[node name="FrontCamera" type="Camera" parent="."]
transform = Transform( 1, 0, 0, 0, 0.865502, 0.500907, 0, -0.500907, 0.865502, 162.7, 125.67, 229.38 )
fov = 46.5
far = 8192.0

[node name="Player" parent="." instance=ExtResource( 6 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 20.9085, 0 )
planet_path = NodePath("../Planet")
front_camera_path = NodePath("../FrontCamera")

[node name="DieBox" type="Area" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 51.3845, 28.1304, -17.0808 )
input_ray_pickable = true
monitorable = false

[node name="Box" type="CollisionShape" parent="DieBox"]
shape = SubResource( 4 )

[node name="DirectionalLight" type="DirectionalLight" parent="."]
transform = Transform( 0.855694, 0.343544, -0.386996, 0, 0.747844, 0.663875, 0.517483, -0.568073, 0.639925, 14.715, 40.8659, 49.6121 )
light_color = Color( 0.709804, 0.866667, 0.972549, 1 )
light_energy = 2.0

[node name="Portal" parent="." instance=ExtResource( 7 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 174.721, -3.70134, -72.5098 )

[connection signal="body_exited" from="DieBox" to="." method="_on_player_die"]
[connection signal="body_entered" from="Portal" to="." method="_on_Portal_body_entered"]
